--- a/src/internal/components/dropdown/styles.scss
+++ b/src/internal/components/dropdown/styles.scss
@@ -100,16 +100,10 @@
 }
 
 .dropdown-content {
+  overflow: auto;
   display: flex;
   flex-direction: column;
   width: 100%;
-}
-
-// Child flex wrapper used because when combining an absolute position
-// and flexbox, IE11 will incorrectly size the container according to its parent
-// and not its content.
-.ie11-wrapper {
-  display: flex;
 }
 
 .stretch-trigger-height {
